--- a/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
+++ b/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
@@ -8,11 +8,17 @@
 } %}
 {{ craft.canto.register('src/js/app.ts', false, tagOptions, tagOptions) }}
 {{ craft.canto.register('src/js/canto-field.js', false, tagOptions, tagOptions) }}
+{#
 {{ craft.canto.register('src/js/test.js', false, tagOptions, tagOptions) }}
+#}
 
-<div style="max-width:200px; max-height:200px; margin-bottom: 35px;" id="dam-asset-preview" data-thumbnailUrl={{thumbnailUrl|default("none")}}>
-    <a id="remove-dam-asset" data-field={{fieldId}} data-element={{elementId}} class="delete icon" title="Remove" style="color:#606D8D; font-weight: bold; font-size: 12px;">&nbsp; Remove Image</a>
+<div style="max-width:200px; max-height:200px; margin-bottom: 35px;" id="dam-asset-preview"
+     data-thumbnailUrl={{ thumbnailUrl|default("none") }}>
+    <a id="remove-dam-asset" data-field={{ fieldId }} data-element={{ elementId }} class="delete icon" title="Remove"
+       style="color:#606D8D; font-weight: bold; font-size: 12px;">&nbsp; Remove Image</a>
 </div>
 <div class="flex">
-    <button type="button" id="rosas-clicker" data-field={{fieldId}} data-element={{elementId}} data-access={{accessToken}} class="btn add icon dashed" tabindex="0">Select a DAM Asset</button>
+    <button type="button" id="rosas-clicker" data-field={{ fieldId }} data-element={{ elementId }}
+            data-access={{ accessToken }} class="btn add icon dashed
+    " tabindex="0">Select a DAM Asset</button>
 </div>
