--- a/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
+++ b/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
@@ -1,6 +1,5 @@
-{#
-{% do view.registerAssetBundle("lsst\\cantodamassets\\web\\assets\\CantoDamAsset") %}
-#}
+{% import "_includes/forms" as forms %}
+
 {% set tagOptions = {
     'depends': [
         'lsst\\cantodamassets\\web\\assets\\CantoDamAsset'
@@ -8,17 +7,42 @@
 } %}
 {{ craft.canto.register('src/js/app.ts', false, tagOptions, tagOptions) }}
 {{ craft.canto.register('src/js/canto-field.js', false, tagOptions, tagOptions) }}
-{#
-{{ craft.canto.register('src/js/test.js', false, tagOptions, tagOptions) }}
-#}
 
-<div style="max-width:200px; max-height:200px; margin-bottom: 35px;" id="dam-asset-preview"
-     data-thumbnailUrl={{ thumbnailUrl|default("none") }}>
-    <a id="remove-dam-asset" data-field={{ fieldId }} data-element={{ elementId }} class="delete icon" title="Remove"
+{% set cantoFieldId = id ?? field.getInputId() %}
+
+{{ forms.hidden({
+    id: cantoFieldId ~ "cantoId",
+    name: name ~ "[cantoId]",
+    value: value.cantoId,
+}) }}
+
+{{ forms.hidden({
+    id: cantoFieldId ~ "cantoAssetData",
+    name: name ~ "[cantoAssetData]",
+    value: value.cantoAssetData,
+}) }}
+
+
+<div style="max-width:200px; max-height:200px; margin-bottom: 35px;{% if not previewUrl %} display: none;{% endif %}"
+     id="dam-asset-preview"
+     data-thumbnailUrl="{{ previewUrl | default("none") }}"
+>
+    <a id="remove-dam-asset" class="delete icon" title="Remove"
        style="color:#606D8D; font-weight: bold; font-size: 12px;">&nbsp; Remove Image</a>
 </div>
+
 <div class="flex">
-    <button type="button" id="rosas-clicker" data-field={{ fieldId }} data-element={{ elementId }}
-            data-access={{ accessToken }} class="btn add icon dashed
-    " tabindex="0">Select a DAM Asset</button>
+    <button
+        type="button"
+        id="rosas-clicker"
+        data-field="{{ fieldId }}"
+        data-element="{{ elementId }}"
+        data-access="{{ accessToken }}"
+        class="btn add icon dashed" tabindex="0">
+        {% if previewUrl %}
+            Choose a Different DAM Asset
+        {% else %}
+            Select a DAM Asset
+        {% endif %}
+    </button>
 </div>
