refactor: Fix hard-coded id’s, and refactor to separate files

--- a/buildchain/src/css/app.css
+++ b/buildchain/src/css/app.css
@@ -30,7 +30,8 @@
  * override them.
  *
  */
-@import "./components/custom.css";
+@import "./components/canto-embed.css";
+@import "./components/canto-field.css";
 
 /**
  * This injects all of Tailwind's utility classes, generated based on your
