--- a/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
+++ b/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
@@ -22,19 +22,20 @@
     value: value.cantoAssetData,
 }) }}
 
-
-<div style="max-width:200px; max-height:200px; margin-bottom: 35px;{% if not previewUrl %} display: none;{% endif %}"
-     id="dam-asset-preview"
+<div style="{% if not previewUrl %} display: none;{% endif %} margin-bottom: 15px;"
+     id="{{ "damAssetPreview" | namespaceInputId(cantoFieldId) }}"
      data-thumbnailUrl="{{ previewUrl | default("none") }}"
+     data-thumbnailName="{{ previewName | default("none") }}"
+     data-assetCount="{{ assetCount | default("none") }}"
 >
-    <a id="remove-dam-asset" class="delete icon" title="Remove"
-       style="color:#606D8D; font-weight: bold; font-size: 12px;">&nbsp; Remove Image</a>
+    <a id="{{ "removeDamAsset" | namespaceInputId(cantoFieldId) }}" class="delete icon" title="Remove"
+       style="color:#606D8D; font-weight: bold; font-size: 12px;">&nbsp; Remove Image{% if assetCount != 1 %}s{% endif %}</a>
 </div>
 
 <div class="flex">
     <button
         type="button"
-        id="rosas-clicker"
+        id="{{ "chooseAsset" | namespaceInputId(cantoFieldId) }}"
         data-field="{{ fieldId }}"
         data-element="{{ elementId }}"
         data-access="{{ accessToken }}"
