--- a/src/templates/_components/fieldtypes/CantoDamAsset_preview.twig
+++ b/src/templates/_components/fieldtypes/CantoDamAsset_preview.twig
@@ -9,7 +9,7 @@
 >
     <div>
         <img class="{{ className }}" style="max-height:200px; max-width:200px;" src="{{ previewUrl }}">
-        <span>{{ previewName }}</span><br />
+        <span>{{ previewName }} / {{ albumName }}</span><br />
     </div>
 
 </div>
