--- a/src/templates/canto-embed.twig
+++ b/src/templates/canto-embed.twig
@@ -33,7 +33,7 @@
         <span class="icon-s-Search-20" id="globalSearchBtn"></span>
     </div>
     <div id="filterSection" class="filter-section ">
-        <span class="title">Filter by Type:</span>
+        <span class="title">Filter:</span>
         <span class="type-font icon-s-AllFiles-32" data-type="allfile" title="All Files"></span>
         <span class="type-font icon-s-Images-32 current" data-type="image" title="Images Smart Album"></span>
         <span class="type-font icon-s-Videos-32" data-type="video" title="Videos Smart Album"></span>
