refactor: Don’t use float

--- a/src/templates/canto-embed.twig
+++ b/src/templates/canto-embed.twig
@@ -58,7 +58,7 @@
         <span class="icon-s-logoout-24"></span>
     </div>
     <!-- Allow for the insertion of the entire album into the target system -->
-    <div class="selected-action-section hidden" id="insertAlbumWrapper" title="Insert Album">
+    <div class="selected-action-section insert-album-section hidden" id="insertAlbumWrapper" title="Insert Album">
         <span class="action-btn" id="insertAlbumBtn" title="Insert these assets into target system.">Insert Album</span>
     </div>
     <div id="selectedActionSection" class="selected-action-section hidden">
