feat: Add “Loadding Canto assets” message

--- a/src/templates/canto-embed.twig
+++ b/src/templates/canto-embed.twig
@@ -106,6 +106,8 @@
                         attributeName="transform" type="rotate" calcMode="linear" values="0 50 50;360 50 50"
                         keyTimes="0;1" dur="1s" begin="0s" repeatCount="indefinite"></animateTransform></circle></svg>
         </span>
+    <h1 class="loading-message">Retrieving assets from Canto</h1>
+    <h3 class="loading-message">This could take a while depending on the number of assets selected</h3>
 </div>
 
 <div id="imageDetailModal" class="image-detail-modal hidden">
