--- a/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
+++ b/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
@@ -34,29 +34,33 @@
     value: value.cantoAlbumData,
 }) }}
 
-<div style="{% if not previewUrl %} display: none;{% endif %} margin-bottom: 15px;"
-     id="{{ "damAssetPreview" | namespaceInputId(cantoFieldId) }}"
-     data-thumbnailUrl="{{ previewUrl | default("none") }}"
-     data-thumbnailName="{{ previewName | default("none") }}"
-     data-albumName="{{ albumName | default("none") }}"
-     data-assetCount="{{ assetCount | default("none") }}"
->
-    <a id="{{ "removeDamAsset" | namespaceInputId(cantoFieldId) }}" class="delete icon" title="Remove"
-       style="color:#606D8D; font-weight: bold; font-size: 12px;">&nbsp; Remove Image{% if assetCount != 1 %}s{% endif %}</a>
-</div>
-
-<div class="flex">
-    <button
-        type="button"
-        id="{{ "chooseAsset" | namespaceInputId(cantoFieldId) }}"
-        data-field="{{ fieldId }}"
-        data-element="{{ elementId }}"
-        data-access="{{ accessToken }}"
-        class="btn add icon dashed" tabindex="0">
-        {% if previewUrl %}
-            Choose a Different DAM Asset
-        {% else %}
-            Select a DAM Asset
+    <div style="{% if not previewUrl %} display: none;{% endif %} margin-bottom: 15px;"
+         id="{{ "damAssetPreview" | namespaceInputId(cantoFieldId) }}"
+         data-thumbnailUrl="{{ previewUrl | default("none") }}"
+         data-thumbnailName="{{ previewName | default("none") }}"
+         data-albumName="{{ albumName | default("none") }}"
+         data-assetCount="{{ assetCount | default("none") }}"
+    >
+        {% if enabled %}
+            <a id="{{ "removeDamAsset" | namespaceInputId(cantoFieldId) }}" class="delete icon" title="Remove"
+               style="color:#606D8D; font-weight: bold; font-size: 12px;">&nbsp; Remove Image{% if assetCount != 1 %}s{% endif %}</a>
         {% endif %}
-    </button>
-</div>
+    </div>
+
+{% if enabled %}
+    <div class="flex">
+        <button
+            type="button"
+            id="{{ "chooseAsset" | namespaceInputId(cantoFieldId) }}"
+            data-field="{{ fieldId }}"
+            data-element="{{ elementId }}"
+            data-access="{{ accessToken }}"
+            class="btn add icon dashed" tabindex="0">
+            {% if previewUrl %}
+                Choose a Different DAM Asset
+            {% else %}
+                Select a DAM Asset
+            {% endif %}
+        </button>
+    </div>
+{% endif %}
