--- a/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
+++ b/src/templates/_components/fieldtypes/CantoDamAsset_input.twig
@@ -8,55 +8,41 @@
 {{ craft.canto.register('src/js/app.ts', false, tagOptions, tagOptions) }}
 {{ craft.canto.register('src/js/canto-field.js', false, tagOptions, tagOptions) }}
 
-{% set cantoFieldId = id ?? field.getInputId() %}
-
 {{ forms.hidden({
-    id: "cantoId" | namespaceInputId(cantoFieldId),
+    id: "cantoId" | namespaceInputId(id),
     name: "cantoId" | namespaceInputName(name),
     value: value.cantoId,
 }) }}
 
 {{ forms.hidden({
-    id: "cantoAlbumId" | namespaceInputId(cantoFieldId),
+    id: "cantoAlbumId" | namespaceInputId(id),
     name: "cantoAlbumId" | namespaceInputName(name),
     value: value.cantoAlbumId,
 }) }}
 
 {{ forms.hidden({
-    id: "cantoAssetData" | namespaceInputId(cantoFieldId),
+    id: "cantoAssetData" | namespaceInputId(id),
     name: "cantoAssetData" | namespaceInputName(name),
     value: value.cantoAssetData,
 }) }}
 
 {{ forms.hidden({
-    id: "cantoAlbumData" | namespaceInputId(cantoFieldId),
+    id: "cantoAlbumData" | namespaceInputId(id),
     name: "cantoAlbumData" | namespaceInputName(name),
     value: value.cantoAlbumData,
 }) }}
 
-    <div style="{% if not previewUrl %} display: none;{% endif %} margin-bottom: 15px;"
-         id="{{ "damAssetPreview" | namespaceInputId(cantoFieldId) }}"
-         data-thumbnailUrl="{{ previewUrl | default("none") }}"
-         data-thumbnailName="{{ previewName | default("none") }}"
-         data-albumName="{{ albumName | default("none") }}"
-         data-assetCount="{{ assetCount | default("none") }}"
-    >
-        {% if enabled %}
-            <a id="{{ "removeDamAsset" | namespaceInputId(cantoFieldId) }}" class="delete icon" title="Remove"
-               style="color:#606D8D; font-weight: bold; font-size: 12px;">&nbsp; Remove Image{% if assetCount != 1 %}s{% endif %}</a>
-        {% endif %}
-    </div>
-
-{% if enabled %}
+{% include "_canto-dam-assets/_components/fieldtypes/includes/CantoDamAsset_image.twig" with { config } only %}
+{% if config.enabled %}
     <div class="flex">
         <button
             type="button"
-            id="{{ "chooseAsset" | namespaceInputId(cantoFieldId) }}"
+            id="{{ "chooseAsset" | namespaceInputId(id) }}"
             data-field="{{ fieldId }}"
             data-element="{{ elementId }}"
             data-access="{{ accessToken }}"
             class="btn add icon dashed" tabindex="0">
-            {% if previewUrl %}
+            {% if config.previewUrl %}
                 Choose a Different DAM Asset
             {% else %}
                 Select a DAM Asset
