feat: Added a `webhookSecureToken` setting for validating webhooks

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -33,3 +33,10 @@
     value: settings.retrieveAssetMetadataEndpoint,
     suggestEnvVars: true
 }) }}
+
+{{ forms.autosuggestField({
+    label: "Webhook Secure Token",
+    name: 'webhookSecureToken',
+    value: settings.webhookSecureToken,
+    suggestEnvVars: true
+}) }}
