feat: Refactor the settings & JavaScript so `tenant` and `appId` values are no longer hard-coded
* Added the `tenantHostName` plugin setting, and pass this down to the Canto Universal Connector JS
* Removed the `retrieveAssetMetadataEndpoint` setting
* Removed the hard-coding of the `tenant` from the JS, instead using the `tenantHostName` plugin setting
* Removed the hard-coding of the `appId` from the JS, instead using the `appId` plugin setting

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -28,9 +28,10 @@
 <p>If the app ID or secret key is needed in the URL include it as <strong>{appId}</strong> or <strong>{secretKey}</strong> with no spaces.</p>
 
 {{ forms.autosuggestField({
-    label: "Retrieve One Asset Endpoint",
-    name: 'retrieveAssetMetadataEndpoint',
-    value: settings.retrieveAssetMetadataEndpoint,
+    label: "Tenant Host Name",
+    instructions: "The hostname for the Canto Tenant, e.g. `rubin.canto.com`",
+    name: 'tenantHostName',
+    value: settings.tenantHostName,
     suggestEnvVars: true
 }) }}
 
