Fixed upload button in modal Fixed upload button in modal

--- a/src/templates/canto-embed.twig
+++ b/src/templates/canto-embed.twig
@@ -46,8 +46,8 @@
     <div id="selectedCountSection" class="selected-count-section hidden"><span id="selected-count">2</span><span> File(s) Selected</span>
     </div>
     <div style="display: inline-block;">
-        <input type="button" onClick="uploadClick(this)" id="uploadBtn" value="Upload File"/>
-        <input onChange="uploadFileToCanto(this);" data-buttonText="Upload File" type="file" id="uploadBtnInvisible"
+        <input type="button" id="uploadBtn" value="Upload File"/>
+        <input data-buttonText="Upload File" type="file" id="uploadBtnInvisible"
                help-id="upload-button" set-aria="{i:70,d:'upload files',pup:1}"
                class="btn-parent btn-default thirdColorText" tabindex="70" aria-label="upload files"
                aria-haspopup="true">
